--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FirstSolitaire</string>
     <string name="next_button">Next Card</string>
+    <string name="stock_string">Stock Image</string>
+    <string name="waste_image">Waste Image</string>
 </resources>
